sörös védés, tvsz+sör védés